fix(css): z-index of header

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -166,6 +166,7 @@ header{
   position: fixed;
   width: 100%;
   border-bottom: 3px solid $teal;
+  z-index: 3;
 }
 
 .fat{
